--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "cypress": "cypress open"
   },
   "dependencies": {
     "@nextui-org/react": "^2.1.10",
@@ -29,6 +30,7 @@
   "devDependencies": {
     "@types/leaflet": "^1.9.4",
     "autoprefixer": "^10.4.15",
+    "cypress": "^13.1.0",
     "postcss": "^8.4.29",
     "tailwindcss": "^3.3.3"
   }
