--- a/package.json
+++ b/package.json
@@ -6,15 +6,13 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "cypress": "cypress open"
+    "lint": "next lint"
   },
   "dependencies": {
     "@nextui-org/react": "^2.1.10",
     "@types/node": "20.6.0",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
-    "cypress-social-logins": "^1.14.1",
     "eslint": "8.49.0",
     "eslint-config-next": "13.4.19",
     "framer-motion": "^10.16.4",
@@ -31,7 +29,6 @@
   "devDependencies": {
     "@types/leaflet": "^1.9.4",
     "autoprefixer": "^10.4.15",
-    "cypress": "^13.1.0",
     "postcss": "^8.4.29",
     "tailwindcss": "^3.3.3"
   }
