--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "next": "13.4.19",
     "next-auth": "^4.23.1",
     "next-themes": "^0.2.1",
+    "node-fetch": "^3.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-leaflet": "^4.2.1",
